<resources>
    <string name="app_name">Gestión siniestros</string>
    <string name="action_settings">Settings</string>
    <string name="boton_notificar">Acceso a mi comunidad</string>

    <!--content_main-->
    <string name="TituloBienvenida">Bienvenido a CLG administración de fincas</string>
    <string name="BotonAcceso">Comunicar incidencia</string>
    <string name="title_activity_datos">Datos Siniestro</string>

    <!--content_datos-->
    <string name="EditTextNombreApellidos">Nombre y Apellidos</string>
    <string name="EditTextApellidos">Apellidos</string>
    <string name="EditTextNombreComunidad">Comunidad</string>
    <string name="EditTextPiso">Piso</string>
    <string name="EditTextPropietario">Propietario ó inquilino</string>
    <string name="EditTextDescripcion">Descripción incidencia</string>
    <string name="EditTextTelefono">Teléfono</string>
    <string name="EditTextFotos">Fotos</string>
    <string name="ButtonHacerFoto">Hacer Foto</string>
    <string name="ButtonCargarFoto">Cargar Foto</string>
    <string name="ButtonEnviar">Enviar</string>

</resources>

