<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_datos"
    tools:context="clg.gesclg.datos"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint = "@string/EditTextNombreApellidos"
        android:ems="10"
        android:id="@+id/editTextNombreApellidos"
        android:layout_weight="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint = "@string/EditTextNombreComunidad"
        android:ems="10"
        android:id="@+id/editTextNombreComunidad"
        android:layout_weight="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint= "@string/EditTextPiso"
        android:ems="10"
        android:id="@+id/editTextPiso"
        android:layout_weight="1" />

    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text= "@string/EditTextPropietario"
        android:ems="10"
        android:id="@+id/editTextPropietario"
        android:layout_weight="1" />-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint= "@string/EditTextDescripcion"
        android:ems="10"
        android:id="@+id/editTextDescripcion"
        android:layout_weight="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint= "@string/EditTextTelefono"
        android:ems="10"
        android:id="@+id/editTextTelefono"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewImagenCamara"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:src="@mipmap/ic_camara"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewImagenArchivo"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:src="@mipmap/ic_camara"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonHacerFoto"
            android:id="@+id/buttonHacerFoto"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonCargarFoto"
            android:id="@+id/buttonCargarFoto"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonEnviar"
        android:id="@+id/buttonEnviar"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

</LinearLayout>
